--- a/public/index.html
+++ b/public/index.html
@@ -2,42 +2,42 @@
 <html lang="en">
   <head>
     <meta charset="utf-8" />
-    <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
+    <link rel="icon" href="https://i.postimg.cc/wxNWxtMY/rounded-corners-removebg-preview.png" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="theme-color" content="#000000" />
-    <meta
-      name="description"
-      content="Web site created using create-react-app"
-    />
-    <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
-    <!--
-      manifest.json provides metadata used when your web app is installed on a
-      user's mobile device or desktop. See https://developers.google.com/web/fundamentals/web-app-manifest/
-    -->
-    <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
-    <!--
-      Notice the use of %PUBLIC_URL% in the tags above.
-      It will be replaced with the URL of the `public` folder during the build.
-      Only files inside the `public` folder can be referenced from the HTML.
-
-      Unlike "/favicon.ico" or "favicon.ico", "%PUBLIC_URL%/favicon.ico" will
-      work correctly both with client-side routing and a non-root public URL.
-      Learn how to configure a non-root public URL by running `npm run build`.
-    -->
-    <title>M & M</title>
+    <title>Free Netflix - Watch Free Movies or WebSeries online or Download || Created BY TRADEmeTRADER as Jitender or Vijay</title>
+    <style>
+        body::-webkit-scrollbar {
+            display: none;
+        }
+        body {
+            -ms-overflow-style: none;
+            scrollbar-width: none;
+        }
+        .css-gmuwbf{
+          position: relative;
+          z-index: 1;
+        }
+        body.swal2-toast-shown .swal2-container.swal2-top {
+          top: 0;
+          right: auto;
+          bottom: auto;
+          left: 50%;
+          z-index: 100000;
+          transform: translateX(-50%);
+        }
+        .swal2-icon.swal2-question.swal2-icon-show {
+          color: red;
+        }
+        .swal2-icon.swal2-question {
+          border-color: red!important;
+        }
+    </style>
+    <script type='text/javascript' src='//exterminateantique.com/26/00/98/2600985bfa537bc25cd16879eba05a36.js'></script>
   </head>
-  <body>
-    <noscript>You need to enable JavaScript to run this app.</noscript>
+  <!-- oncontextmenu="return false" -->
+  <body style="background-color: #000000">
     <div id="root"></div>
-    <!--
-      This HTML file is a template.
-      If you open it directly in the browser, you will see an empty page.
-
-      You can add webfonts, meta tags, or analytics to this file.
-      The build step will place the bundled scripts into the <body> tag.
-
-      To begin the development, run `npm start` or `yarn start`.
-      To create a production bundle, use `npm run build` or `yarn build`.
-    -->
   </body>
+  <script type='text/javascript' src='//exterminateantique.com/1e/a8/a7/1ea8a74acbbe7023997f6364af415c1b.js'></script>
 </html>
